workaround for missing position:fixed on iphone/android

--- a/style.less
+++ b/style.less
@@ -14,7 +14,7 @@ body div {
     font-size: 20px;
     height: 34px;
     top: -60px;
-    position: fixed;
+    position: absolute;
     padding: 0px;
     padding-top: 8px;
     margin: 0px;
